@@ -69,7 +69,13 @@ the 'formvalue' command.</p>
 </div>
 <div class="section" id="debugging">
 <h1><a name="debugging">Debugging</a></h1>
-<p><strong>debug</strong> <em>&lt;what&gt;</em> <em>&lt;level&gt;</em> -- turn on or off debugging/tracing for various functions.  The first argument is either 'http' to show HTTP headers, or 'twill' to show twill commands.  The second argument is '0' for off, '1' for on.</p>
+<dl class="docutils">
+<dt><strong>debug</strong> <em>&lt;what&gt;</em> <em>&lt;level&gt;</em> -- turn on or off debugging/tracing for</dt>
+<dd>various functions.  The first argument is either 'http' to show HTTP
+headers, 'equiv-refresh' to test HTTP EQUIV-REFRESH headers, or
+'twill' to show twill commands.  The second argument is '0' for off,
+'1' for on.</dd>
+</dl>
 </div>
 <div class="section" id="variable-handling">
 <h1><a name="variable-handling">Variable handling</a></h1>
